<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test_menu">Test Menu</string>
    <string name="USERNAME_LABEL">Current User:</string>
    <string name="SERVER_URL_LABEL">Server Url</string>
    <string name="SERVER_URL_DIALOG_TITLE">Server Url</string>
    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="SET_SERVER_URL">Change Server</string>
    <string name="INITIALIZING_TITLE">Initializing Multiplayer Session...</string>
    <string name="INITIALIZING_MSG">Please wait...</string>
    <string name="friends_menu_button">Friends</string>
    <string name="games_menu_button">Games</string>
    <string name="settings_menu_button">Settings</string>
    <string name="SET_URL_BUTTON">Set</string>
    <string name="search_hint">Search friends</string>
    <string name="game_invite">Game Invite</string>
    <string name="users_group_name">Users</string>
    <string name="pending_requests_group_name">Pending Requests</string>
    <string name="friends_group_name">Friends</string>
    <string name="declined_requests_group_name">Declined Requests</string>
    <string name="default_url">http://192.168.1.67:9000</string>
</resources>
