<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btnFriends"
            style="@style/navbar_button"
            android:text="@string/friends_menu_button"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:background="@color/menu_bg" />

        <RadioButton
            android:id="@+id/btnGames"
            android:text="@string/games_menu_button"
            style="@style/navbar_button"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:background="@color/menu_bg" />

        <RadioButton
            android:id="@+id/btnSettings"
            android:text="@string/settings_menu_button"
            style="@style/navbar_button"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:background="@color/menu_bg" />
    </RadioGroup>

    <RadioButton
        style="@style/navbar_button"
        android:id="@+id/radioButton"
        android:text="@string/friends_menu_button"
        android:layout_marginLeft="5dp"
        android:background="#babbb6"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" />

</LinearLayout>